# silencia

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  Makefile  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  deny.toml  test-distros.sh  test-handshake-debug.sh  test-zk-identity.sh
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: chat.rs  main.rs  password.rs  ui.rs  ui_old.rs
apps/node/: Cargo.toml
apps/node/src/: main.rs
crates/silencia-crypto/: Cargo.toml
crates/silencia-crypto/src/: aead.rs  chat_crypto.rs  error.rs  handshake.rs  identity.rs  kem.rs  lib.rs  session.rs  signature_policy.rs
crates/silencia-crypto/tests/: hybrid_signature_test.rs  integration_test.rs  rotation_overlap_test.rs  session_rotation_bug_test.rs
crates/silencia-identity/: Cargo.toml
crates/silencia-identity/benches/: zkproof.rs
crates/silencia-identity/src/: circuit.rs  error.rs  field_utils.rs  identity.rs  lib.rs  merkle.rs  poseidon.rs  proof.rs  prover.rs  semaphore.rs  storage.rs
crates/silencia-mls/: Cargo.toml
crates/silencia-mls/src/: group.rs  lib.rs
crates/silencia-net/: Cargo.toml
crates/silencia-net/src/: approval.rs  circuit.rs  cover.rs  error.rs  handshake.rs  handshake_protocol.rs  lib.rs  message.rs  timing.rs  transport.rs
crates/silencia-net/tests/: approval_gating_test.rs  dos_protection_tests.rs  dynamic_ports_test.rs  edge_cases_test.rs  encrypted_message_test.rs  end_to_end_test.rs  forward_secrecy_test.rs  gossipsub_test.rs  handshake_integration_test.rs  integration_test.rs  replay_protection_test.rs  swarm_test.rs
crates/silencia-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/silencia-sdk/src/: error.rs  insecure.rs  lib.rs  mls.rs  types.rs  wire.rs  zk.rs
crates/silencia-sdk/tests/: integration_tests.rs
crates/silencia-vault/: Cargo.toml
crates/silencia-vault/src/: identity_vault.rs  lib.rs  storage.rs
crates/silencia-wire/: Cargo.toml  build.rs
crates/silencia-wire/proto/: handshake.proto  message.proto
crates/silencia-wire/src/: convert.rs  error.rs  framing.rs  handshake.rs  lib.rs  message.rs
crates/silencia-zk/: Cargo.toml
crates/silencia-zk/src/: circuit.rs  credential.rs  error.rs  groth16.rs  lib.rs  merkle.rs  policy.rs  rln.rs
licenses/: MIT.txt  README.md
scripts/: security-audit.sh
