[package]
license = "MIT"
name = "silencia-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silencia"
path = "src/main.rs"

[dependencies]
silencia-sdk = { path = "../../crates/silencia-sdk" }
silencia-net = { path = "../../crates/silencia-net" }
silencia-crypto = { path = "../../crates/silencia-crypto" }
silencia-identity = { path = "../../crates/silencia-identity" }
silencia-vault = { path = "../../crates/silencia-vault" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
libp2p = "0.53"
sha2 = "0.10"
colored = "2"
chrono = "0.4"
indicatif = "0.17"
console = "0.15"
hex = "0.4.3"
rpassword = "7.3"
blake3 = "1.5"
rusqlite = "0.31"
