[package]
name = "silencia-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Note: PQ features removed - crypto is always-on hybrid (Option C)

[dependencies]
# Networking
libp2p = { workspace = true }
libp2p-swarm = "0.44"
libp2p-swarm-derive = "0.34"
quinn = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Utils
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
lru = "0.12" # For replay protection deduplication cache
governor = "0.6" # For per-peer rate limiting (DoS protection)

# Internal
silencia-wire = { path = "../silencia-wire" }
silencia-crypto = { path = "../silencia-crypto" }
silencia-identity = { path = "../silencia-identity" }
silencia-vault = { path = "../silencia-vault" }
ed25519-dalek = { workspace = true }
hex = "0.4"
blake3 = { workspace = true } # For message deduplication hashing

# ZK proof dependencies (for VK handling)
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
