[package]
name = "silencia-sdk"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
authors.workspace = true

[dependencies]
silencia-net = { path = "../silencia-net" }
silencia-crypto = { path = "../silencia-crypto" }
silencia-mls = { path = "../silencia-mls" }
silencia-zk = { path = "../silencia-zk" }
silencia-vault = { path = "../silencia-vault" }
silencia-wire = { path = "../silencia-wire" }
silencia-identity = { path = "../silencia-identity" }

tokio = { workspace = true, features = ["sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
thiserror = "2.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
